--- a/REGULAR_WINDOW_MainWindow.xaml
+++ b/REGULAR_WINDOW_MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="LinkerPlayer.Windows.MainWindow"
+<Window x:Class="LinkerPlayer.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -19,12 +19,9 @@
         TextElement.FontWeight="Medium"
         TextElement.Foreground="{DynamicResource DefaultTextBrush}"
         UseLayoutRounding="True"
-        Closing="OnMainWindowClose"
-        Loaded="Window_Loaded"
-        StateChanged="Window_StateChanged"
         mc:Ignorable="d">
 
-  <!-- Custom Window Chrome for resize functionality -->
+  <!-- Custom Window Chrome -->
   <WindowChrome.WindowChrome>
     <WindowChrome CaptionHeight="40"
                   ResizeBorderThickness="5"
