--- a/LinkerPlayer/Styles/StylesRepository.xaml
+++ b/LinkerPlayer/Styles/StylesRepository.xaml
@@ -528,6 +528,33 @@
 
   <!--
     ************************
+    VuMeter Style
+    ************************
+  -->
+  <!--  VU Meter Style  -->
+  <Style x:Key="VuMeterStyle" TargetType="{x:Type audio:VuMeter}">
+    <Setter Property="Background" Value="Transparent" />
+    <Setter Property="BorderBrush" Value="{DynamicResource DefaultBorderBrush}" />
+    <Setter Property="BorderThickness" Value="1" />
+    <Setter Property="Template">
+      <Setter.Value>
+        <ControlTemplate TargetType="{x:Type audio:VuMeter}">
+          <Border
+            Background="{TemplateBinding Background}"
+            BorderBrush="{TemplateBinding BorderBrush}"
+            BorderThickness="{TemplateBinding BorderThickness}">
+            <Canvas
+              x:Name="PART_VuCanvas"
+              Margin="20,5,5,5"
+              ClipToBounds="True" />
+          </Border>
+        </ControlTemplate>
+      </Setter.Value>
+    </Setter>
+  </Style>
+
+  <!--
+    ************************
     DataGrid Styles
     ************************
   -->
