--- a/LinkerPlayer/UserControls/TrackInfo.xaml
+++ b/LinkerPlayer/UserControls/TrackInfo.xaml
@@ -155,8 +155,14 @@
       Margin="8,5,8,0"
       HorizontalAlignment="Stretch"
       VerticalAlignment="Stretch">
+      <Grid.RowDefinitions>
+        <RowDefinition Height="*"/>
+        <RowDefinition Height="Auto"/>
+      </Grid.RowDefinitions>
+      
       <audio:SpectrumAnalyzer
         x:Name="Spectrum"
+        Grid.Row="0"
         AveragePeaks="False"
         BarDecaySpeed="2.0"
         BarHeightScaling="Decibel"
@@ -167,8 +173,22 @@
         PeakHeight="3.0"
         RefreshInterval="25"
         Style="{StaticResource SpectrumAnalyzerStyle}" />
+        
+      <!-- VU Meter below Spectrum Analyzer -->
+      <audio:VuMeter
+        x:Name="VuMeter"
+        Grid.Row="1"
+        Height="50"
+        Margin="0,5,0,0"
+        ChannelHeight="15"
+        ChannelSpacing="3"
+        DecaySpeed="0.95"
+        ShowLabels="True"
+        Style="{StaticResource VuMeterStyle}" />
+        
       <Button
         Name="SpectrumButton"
+        Grid.Row="0"
         Width="86"
         Height="25"
         HorizontalAlignment="Right"
