--- a/LinkerPlayer/Windows/SettingsWindow.xaml
+++ b/LinkerPlayer/Windows/SettingsWindow.xaml
@@ -95,12 +95,12 @@
     </Grid>
 
     <Grid Grid.Row="1">
-      <StackPanel Margin="0,0,10,14">
+      <StackPanel Margin="0,10,10,10">
 
         <!--  Output Mode  -->
-        <Grid>
+        <Grid Margin="0,0,10,14">
           <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150" />
+            <ColumnDefinition Width="120" />
             <ColumnDefinition Width="10" />
             <ColumnDefinition />
           </Grid.ColumnDefinitions>
@@ -132,10 +132,10 @@
         </Grid>
 
         <!--  Output Device  -->
-        <Grid Margin="0,10,10,14">
+        <Grid Margin="0,0,10,14">
 
           <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150" />
+            <ColumnDefinition Width="120" />
             <ColumnDefinition Width="10" />
             <ColumnDefinition />
           </Grid.ColumnDefinitions>
@@ -148,7 +148,7 @@
           <ComboBox
             x:Name="OutputDeviceCombo"
             Grid.Column="2"
-            Width="Auto"
+            Width="288"
             Height="24"
             HorizontalContentAlignment="Center"
             Background="{DynamicResource ComboboxItemBackgroundBrush}"
@@ -163,7 +163,7 @@
         <!--  Color Theme  -->
         <Grid Margin="0,0,0,14">
           <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150" />
+            <ColumnDefinition Width="120" />
             <ColumnDefinition Width="10" />
             <ColumnDefinition Width="150" />
           </Grid.ColumnDefinitions>
