--- a/LinkerPlayer/Windows/PropertiesWindow.xaml
+++ b/LinkerPlayer/Windows/PropertiesWindow.xaml
@@ -1,11 +1,11 @@
 ﻿<Window
   x:Class="LinkerPlayer.Windows.PropertiesWindow"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="PropertiesWindow"
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  Title="PropertiesWindow"
   Width="500"
   Height="800"
   WindowStyle="None"
@@ -140,7 +140,7 @@
               Height="Auto"
               MinWidth="400"
               MaxHeight="Infinity"
-              Margin="0,0,0,10"
+              Margin="0,0,0,4"
               AutoGenerateColumns="False"
               CanUserAddRows="False"
               CanUserResizeRows="False"
@@ -150,7 +150,8 @@
               PreviewMouseWheel="DataGrid_PreviewMouseWheel"
               RowStyle="{StaticResource SharedDataGridRowStyle}"
               Style="{StaticResource SharedDataGridStyle}"
-              VerticalScrollBarVisibility="Disabled">
+              VerticalScrollBarVisibility="Disabled"
+              HorizontalScrollBarVisibility="Disabled">
 
               <DataGrid.Columns>
                 <DataGridTextColumn
@@ -213,7 +214,8 @@
               PreviewMouseWheel="DataGrid_PreviewMouseWheel"
               RowStyle="{StaticResource SharedDataGridRowStyle}"
               Style="{StaticResource SharedDataGridStyle}"
-              VerticalScrollBarVisibility="Disabled">
+              VerticalScrollBarVisibility="Disabled"
+              HorizontalScrollBarVisibility="Disabled">
 
               <DataGrid.Columns>
                 <DataGridTextColumn
@@ -268,7 +270,8 @@
               PreviewMouseWheel="DataGrid_PreviewMouseWheel"
               RowStyle="{StaticResource SharedDataGridRowStyle}"
               Style="{StaticResource SharedDataGridStyle}"
-              VerticalScrollBarVisibility="Disabled">
+              VerticalScrollBarVisibility="Disabled"
+              HorizontalScrollBarVisibility="Disabled">
 
               <DataGrid.Columns>
                 <DataGridTextColumn
@@ -317,39 +320,57 @@
                 Fill="{DynamicResource SpectrumPeakBrush}" />
             </Grid>
 
-            <DataGrid
-              Grid.Row="7"
-              Height="Auto"
-              MinWidth="400"
-              MaxHeight="Infinity"
-              AutoGenerateColumns="False"
-              CanUserAddRows="False"
-              CanUserResizeRows="False"
-              CellStyle="{StaticResource SharedDataGridCellStyle}"
-              ColumnHeaderStyle="{StaticResource SharedDataGridColumnHeaderStyle}"
-              ItemsSource="{Binding PictureInfoItems}"
-              PreviewMouseWheel="DataGrid_PreviewMouseWheel"
-              RowStyle="{StaticResource SharedDataGridRowStyle}"
-              Style="{StaticResource SharedDataGridStyle}"
-              VerticalScrollBarVisibility="Disabled">
+            <!-- Picture section with two columns: DataGrid and Image -->
+            <Grid Grid.Row="7" Margin="0,0,0,10">
+              <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="140" />
+              </Grid.ColumnDefinitions>
 
-              <DataGrid.Columns>
-                <DataGridTextColumn
-                  Width="200"
-                  MinWidth="100"
-                  Binding="{Binding Name}"
-                  CanUserResize="True"
-                  Header="Name"
-                  IsReadOnly="True" />
-                <DataGridTextColumn
-                  Width="*"
-                  MinWidth="100"
-                  Binding="{Binding Value}"
-                  CanUserResize="True"
-                  Header="Value"
-                  IsReadOnly="True" />
-              </DataGrid.Columns>
-            </DataGrid>
+              <!-- DataGrid: Name/Value columns only -->
+              <DataGrid
+                Grid.Column="0"
+                MinWidth="200"
+                MaxHeight="Infinity"
+                AutoGenerateColumns="False"
+                CanUserAddRows="False"
+                CanUserResizeRows="False"
+                CellStyle="{StaticResource SharedDataGridCellStyle}"
+                ColumnHeaderStyle="{StaticResource SharedDataGridColumnHeaderStyle}"
+                ItemsSource="{Binding PictureInfoItems}"
+                PreviewMouseWheel="DataGrid_PreviewMouseWheel"
+                RowStyle="{StaticResource SharedDataGridRowStyle}"
+                Style="{StaticResource SharedDataGridStyle}"
+                VerticalScrollBarVisibility="Disabled"
+                HorizontalScrollBarVisibility="Disabled">
+                <DataGrid.Columns>
+                  <DataGridTextColumn
+                    Width="200"
+                    MinWidth="100"
+                    Binding="{Binding Name}"
+                    CanUserResize="True"
+                    Header="Name"
+                    IsReadOnly="True" />
+                  <DataGridTextColumn
+                    Width="*"
+                    MinWidth="100"
+                    Binding="{Binding Value}"
+                    CanUserResize="True"
+                    Header="Value"
+                    IsReadOnly="True" />
+                </DataGrid.Columns>
+              </DataGrid>
+
+              <!-- Album cover image -->
+              <Border Grid.Column="1" Margin="10,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Center">
+                <Image
+                  Width="120"
+                  Height="120"
+                  Stretch="Uniform"
+                  VerticalAlignment="Center"
+                  Source="{Binding AlbumCoverSource}" />
+              </Border>
+            </Grid>
 
             <!--  Lyrics  -->
             <Grid Grid.Row="8" Margin="0,0,0,5">
@@ -371,8 +392,8 @@
                 Fill="{DynamicResource SpectrumPeakBrush}" />
             </Grid>
             <TextBox
-              Grid.Row="9"
               x:Name="LyricsTextBox"
+              Grid.Row="9"
               MinHeight="100"
               MaxHeight="300"
               Padding="8"
